# Apartment_Defect_AI

./: .dockerignore  .gitignore  CHANGELOG.md  CURRENT_STATUS.md  DATA_GOVERNANCE.md  Dockerfile  LABELING_GUIDE.md  NEXT_TASK.md  OPERATIONS.md  README.md  ROADMAP.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
dataset/config/: pipeline.yaml
dataset/schemas/: annotation_qa_report.schema.json  annotation_revision.schema.json  api_error.schema.json  dataset_version_manifest.schema.json  deployment_profiles.schema.json  duplicate_groups.schema.json  image_ingestion_manifest.schema.json  image_quality_report.schema.json  image_record.schema.json  labeling_task.schema.json  model_checksums.schema.json  model_compatibility_manifest.schema.json  model_manifest.schema.json  model_package_validation.schema.json  model_registry.schema.json  prediction_batch_request.schema.json  prediction_request.schema.json  privacy_mask.schema.json  release_check_report.schema.json  release_manifest.schema.json  service_metrics.schema.json  (+8 more)
docs/: 21_AI_Data_Engineering.html  API_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  Architecture.md  CLI_REFERENCE.md  COVERAGE_REPORT.md  DEPENDENCY_GRAPH.md  DeveloperGuide.md  JSON_SCHEMA_REFERENCE.md  MODEL_PACKAGE_SPEC.md  OpenAPI.html  REGISTRY_SPEC.md  RELEASE_NOTES.md  SCHEMA_INDEX.md  SERVING_GUIDE.md  TESTING_GUIDE.md  UserGuide.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_27c2b0ffef35e8c2___init___py.html  z_27c2b0ffef35e8c2_legacy_import_py.html  z_3c4ef12ae80cbc54___init___py.html  z_3c4ef12ae80cbc54_manifest_py.html  z_3d5e74864fa94fd4___init___py.html  z_3d5e74864fa94fd4_group_stratified_py.html  z_3e05c968ae6c36cf___init___py.html  z_3e05c968ae6c36cf_cli_py.html  z_3e05c968ae6c36cf_io_py.html  z_3e05c968ae6c36cf_models_py.html  z_8bc24843053e2f09___init___py.html  z_8bc24843053e2f09_policy_py.html  z_8e5c22a377c355f2___init___py.html  z_8e5c22a377c355f2_backend_registry_py.html  z_8e5c22a377c355f2_backends_py.html  z_8e5c22a377c355f2_evaluation_models_py.html  z_8e5c22a377c355f2_evaluation_py.html  z_8e5c22a377c355f2_field_data_models_py.html  z_8e5c22a377c355f2_field_data_py.html  z_8e5c22a377c355f2_image_io_py.html  z_8e5c22a377c355f2_inference_py.html  z_8e5c22a377c355f2_model_package_py.html  z_8e5c22a377c355f2_model_registry_py.html  z_8e5c22a377c355f2_models_py.html  z_8e5c22a377c355f2_onnx_backend_py.html  z_8e5c22a377c355f2_package_models_py.html  z_8e5c22a377c355f2_pipeline_py.html  z_8e5c22a377c355f2_postprocessing_py.html  z_8e5c22a377c355f2_pytorch_training_py.html  z_8e5c22a377c355f2_release_readiness_py.html  z_8e5c22a377c355f2_serving_app_py.html  z_8e5c22a377c355f2_serving_entrypoint_py.html  z_8e5c22a377c355f2_serving_py.html  z_8e5c22a377c355f2_training_dataset_py.html  z_8e5c22a377c355f2_training_models_py.html  z_8e5c22a377c355f2_training_py.html  (+5 more)
(+55 files in other folders)
