[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apartment-defect-ai-data-engineering"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
onnx = ["onnxruntime>=1.18", "numpy>=1.26", "Pillow>=10"]

[project.scripts]
apartment-data = "data_engineering.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["python/tests"]
