[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apartment-defect-ai-data-engineering"
version = "0.10.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
onnx = ["onnxruntime>=1.18", "numpy>=1.26", "Pillow>=10"]
pytorch = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.26",
  "Pillow>=10",
  "onnx>=1.16",
]
serving = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
]

[project.scripts]
apartment-data = "data_engineering.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["python/tests"]
