[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apartment-defect-ai-data-engineering"
version = "0.11.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
serving = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
]
onnx = [
  "onnx>=1.16,<2",
  "onnxruntime>=1.18,<2",
  "numpy>=1.26,<3",
  "Pillow>=10,<12",
]
pytorch = [
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "numpy>=1.26,<3",
  "Pillow>=10,<12",
  "onnx>=1.16,<2",
]
full = [
  "pytest>=8",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "onnxruntime>=1.18,<2",
  "numpy>=1.26,<3",
  "Pillow>=10,<12",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "onnx>=1.16,<2",
]

[project.scripts]
apartment-data = "data_engineering.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["python/tests"]
markers = [
  "integration: cross-component integration tests",
  "serving: requires optional serving dependencies",
  "onnx: requires ONNX and ONNX Runtime dependencies",
  "training: requires optional PyTorch training dependencies",
  "slow: intentionally longer smoke paths",
  "docker: Docker or container static validation",
]
